# tasks

./: .env.sh  .gitignore  LICENSE  README.md  check.py  env  main.py  notify.py  pyproject.toml  requirements.txt  run.py  utils.py
.github/workflows/: check-in.yml  find-domain.yml  schedule.yml
checkin/: checkin.py  fanli.py  megstudio.py  megstudio_ql.py  utils.py  v2ex.py
pkg/notifier/: dingtalk.py  serverchan.py
pkg/provider/: smzdm.py  v2ex.py
src/: entry.py  notify.py  ocr.py
src/checkin/: megstudio.py  v2ex.py
src/find/: domain.py  yuming.py
src/task/: domain.py
